# nxusKit-examples

./: .gitignore  NOTICE  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: release.yml
conformance/: dependency-audit.json  examples_manifest.json
conformance/harness/: schema.json
examples/: README.md
examples/apps/arbiter/: README.md
examples/apps/arbiter/bash/: Makefile  main.sh  test.sh
examples/apps/arbiter/go/: README.md
examples/apps/arbiter/rust/: Cargo.toml
examples/apps/puzzler/: README.md
examples/apps/puzzler/go/: README.md
examples/apps/puzzler/rust/: Cargo.toml
examples/apps/racer/: README.md
examples/apps/racer/go/: README.md
examples/apps/racer/rust/: Cargo.toml
examples/apps/riffer/: README.md
examples/apps/riffer/go/: README.md
examples/apps/riffer/rust/: main.rs
examples/apps/ruler/: README.md
examples/apps/ruler/bash/: Makefile  main.sh  test.sh
examples/apps/ruler/go/: README.md
examples/integrations/alert-triage/bash/: Makefile  main.sh  test.sh
examples/integrations/bn-solver-clips-pipeline/: README.md
examples/integrations/bn-solver-clips-pipeline/bash/: Makefile  main.sh  test.sh
examples/integrations/bn-structure-learning/: README.md
examples/integrations/clips-basics/: README.md
examples/integrations/clips-basics/bash/: Makefile  main.sh  test.sh
examples/integrations/clips-basics/clips/: README.md
examples/integrations/clips-llm-hybrid/: README.md
examples/integrations/clips-llm-hybrid/bash/: Makefile  main.sh  test.sh
examples/integrations/llm-solver-hybrid/: README.md
examples/integrations/llm-solver-hybrid/bash/: Makefile  main.sh  test.sh
examples/integrations/zen-decisions/bash/: Makefile  main.sh  test.sh
examples/patterns/basic-chat/rust/: Cargo.toml
examples/patterns/bayesian-inference/bash/: Makefile  main.sh  test.sh
examples/patterns/bayesian-inference/rust/: Cargo.toml
examples/patterns/blocking-api/rust/: Cargo.toml
examples/patterns/capability-detection/bash/: Makefile  main.sh
examples/patterns/capability-detection/rust/: Cargo.toml
examples/patterns/convenience-api/rust/: Cargo.toml
examples/patterns/cost-routing/bash/: Makefile  main.sh
examples/patterns/cost-routing/rust/: Cargo.toml
examples/patterns/multi-provider/bash/: Makefile  main.sh  test.sh
examples/patterns/multi-provider/rust/: Cargo.toml
examples/patterns/polymorphic/rust/: Cargo.toml
examples/patterns/retry-fallback/bash/: Makefile  main.sh  test.sh
examples/patterns/solver/: README.md
examples/patterns/solver-what-if/: README.md
examples/patterns/solver/rust/: Cargo.toml
examples/patterns/streaming/: README.md
examples/patterns/structured-output/rust/: Cargo.toml
examples/patterns/token-budget/rust/: Cargo.toml
examples/patterns/token-budget/rust/src/: lib.rs
examples/patterns/vision/: README.md
examples/patterns/vision/rust/: Cargo.toml
examples/patterns/vision/rust/src/: main.rs
examples/shared/bash/: Makefile.bash-example.template  nxuskit-common.sh
scripts/: check-canonical-ordering.py  generate-examples-showcase.sh  normalize_example_readme_build_run.py  pre-pr-check.sh  setup-sdk-symlink.sh  test-examples.sh
(+38 files in other folders)
