[package]
name = "puzzler-example"
version = "0.1.0"
edition = "2024"
description = "Puzzler pattern example - Puzzle-solving with LLM + constraint propagation"
publish = false

[dependencies]
nxuskit = { path = "../../../../sdk/nxuskit-rust" }
llm-patterns = { path = "../../../shared/rust-support" }
nxuskit-examples-interactive = { path = "../../../shared/rust" }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
