[package]
name = "cost-routing"
version = "0.1.0"
edition = "2024"
publish = false

# Exclude from parent workspace - this is a standalone example
[workspace]

[dependencies]
nxuskit-examples-interactive = { path = "../../../shared/rust" }
nxuskit = { path = "../../../../sdk/nxuskit-rust" }
tokio = { version = "1.49", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
panic = "abort"
