[package]
name = "vision-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
nxuskit-examples-interactive = { path = "../../../shared/rust" }
nxuskit = { path = "../../../../sdk/nxuskit-rust" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
panic = "abort"
